--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,12 +3,10 @@
 <head>
   <% include ../partials/header.ejs %>
 </head>
+  <body>
 
-<body>
+  <input class="search__field search__field--jumbo funky--border"/>
+  <button>Submit</button>
 
-<div class="jumbotron text-center">
-  Will rules
-</div>
-
-</body>
+  </body>
 </html>
