--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,8 @@
   <body>
 
   <input class="search__field search__field--jumbo funky--border"/>
-  <button>Submit</button>
+  <button class="search__button">Submit</button>
+  <div class="result__block"></div>
 
   </body>
 </html>
