--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -47,8 +47,10 @@
                         <div class="title">
                 <h2>Find a face!</h2>
             </div>
-                	  <input class="search__field search__field--jumbo funky--border"/>
-                        <button class="search__button">Submit</button>
+              <div class="input__container">
+              	  <input class="search__field search__field--jumbo funky--border"/>
+                  <button class="funky--border search__button">Submit</button>
+            </div>
                         <div class="result__block"></div>
 		</div>
 	</div>
