--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,17 +1,33 @@
 body {
   text-align: center;
+  font-family: 'Lato', sans-serif;
 }
 
 .search__field {
-  border: 1px solid gray;
+  border: 1px solid #9464a8;
   border-radius: 4px;
   color: black;
 }
 
 .search__field--jumbo {
   height: 40px;
-  width: 600px;
+  width: 500px;
   font-size: 32px;
+}
+
+.search__button {
+  float: right;
+  height: 40px;
+
+  background: white;
+  border: 1px solid #9464a8;
+  border-radius: 4px;
+  color: black;
+  text-transform: uppercase;
+}
+
+.search__field:hover, .search__button:hover {
+  background: whitesmoke;
 }
 
 .result__block {
@@ -19,5 +35,10 @@ body {
 }
 
 .result__block img {
-  width: 400px;
+  height: 400px;
+}
+
+.input__container {
+  width: 600px;
+  margin: 0px auto;
 }
