--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,17 +43,15 @@
 </header>
 <div class="container-fluid main" id="page-top" >
 	<div class="row">
-		<div class="col-md-12 backg">
+		<div class="col-md-12 backg" style="height:800px" >
                         <div class="title">
                 <h2>Find a face!</h2>
             </div>
-
               <div class="input__container">
               	  <input class="search__field search__field--jumbo funky--border"/>
                   <button class="funky--border search__button">Submit</button>
             </div>
                         <div class="result__block"></div>
-                        <div class="loader" style="display:none">Loading...</div>
 		</div>
 <div id="bgblur" style="position: fixed; bottom:0 ; top:0 ; left:0; right:0; z-index:-1">
 
