--- a/public/style.css
+++ b/public/style.css
@@ -267,6 +267,10 @@ h2.features-text::after {
 		width: 100%;
 		float: left;
 }
+#bgblur{
+        -webkit-filter: blur(5px);
+    
+}
 .notes-bg
 {
 	background: rgba(33, 42, 63, 0.9);
