--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,17 +42,20 @@
 		</div>
 	</div>
 </header>
-<div class="container-fluid main" id="page-top">
+<div class="container-fluid main" id="page-top" >
 	<div class="row">
-		<div class="col-md-12 backg" style="height:800px">
+		<div class="col-md-12 backg" style="height:800px" >
                         <div class="title">
                 <h2>Find a face!</h2>
             </div>
-                	  <input class="search__field search__field--jumbo funky--border"/>
+                	  <input class="search__field search__field--jumbo funky--border"/><br>
                         <button class="search__button">Submit</button>
                         <div class="result__block"></div>
 		</div>
-		<div class="col-md-12 some-notes">
+		
+	</div>
+</div>
+<div class="col-md-12 some-notes" style="position: fixed; bottom:0">
 			<div class="title">
                 <h2>Welcome To FaceFinder</h2>
             </div>
@@ -60,9 +63,9 @@
                 <p>Facefinder finds friends faces most similar to yours!</p>
             </div>
 		</div>
-	</div>
-</div>
+<div id="bgblur" style="position: fixed; bottom:0 ; top:0 ; left:0; right:0; z-index:-1">
 
+</div>
 
 
 
