--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,7 +43,7 @@
 </header>
 <div class="container-fluid main" id="page-top" >
 	<div class="row">
-		<div class="col-md-12 backg" style="height:800px" >
+		<div class="col-md-12 backg">
                         <div class="title">
                 <h2>Find a face!</h2>
             </div>
