--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -53,6 +53,7 @@
                   <button class="funky--border search__button">Submit</button>
             </div>
                         <div class="result__block"></div>
+                        <div class="loader" style="display:none">Loading...</div>
 		</div>
 <div id="bgblur" style="position: fixed; bottom:0 ; top:0 ; left:0; right:0; z-index:-1">
 
